--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -213,3 +213,90 @@
     color: black !important;
   }
 }
+
+@media only screen and (max-width: 600px) {
+
+  .header{
+    height: 120px !important;
+    .newlogoImage{
+      display: none;
+    }
+    .reservationsButton {
+      margin-top: 10px;
+      padding:  0;
+      font-size: 10px;
+      line-height: 1px !important;
+    }
+    .textlogo{
+      margin-top: 25px;
+    }
+  }
+  .smallheader {
+    opacity: .8;
+    height: 60px !important;
+    margin: 0;
+  
+    .reservationsButton {
+      transition: all 0.4s ease-in-out;
+      transform: translateY(-34px);
+    }
+  
+    .menuToggle {
+      transition: all 0.4s ease-in-out;
+      transform: translateY(-34px);
+    }
+    img{
+      opacity: 0;
+    }
+    .textlogo{
+      transition: all 0.4s ease-in-out;
+      transform: translateY(-34px);
+    }
+  }
+  .menu{
+    height: auto;
+  }
+  nav{
+    
+    .left{
+      display: none;
+    }
+    .reservationsButtonWhite {
+      pointer-events: visible;
+      cursor: pointer !important;
+      padding:  0;
+      font-size: 10px;
+      line-height: 1px !important;
+      margin-left: 3%;
+    }
+  }
+  .parentDiv {
+    max-height: 84vh !important;
+    overflow-y: hidden;
+    pointer-events: all;
+    overflow-x: hidden;
+  }
+  .right {
+    span,a {
+      pointer-events: visible;
+      text-decoration: none;
+      color: #ffffff;
+      margin-right:25px;
+    }
+  }
+  .linkHover {
+    font-family: TiemposHeadline-light !important;
+    font-size: 30px;
+    transition: all 1s ease;
+    pointer-events: visible;
+    cursor: pointer;
+    &:hover {
+      translate: 0rem !important;
+    }
+  }
+  .navimg{
+    margin: 0% !important;
+  }
+}
+
+
