--- a/src/styles/occasion.module.scss
+++ b/src/styles/occasion.module.scss
@@ -54,4 +54,10 @@
         color:#272525;
     }
 }
+@media screen and (max-width: 480px) {
+    .contentHeading{
+        font-size: 20px;
+    }
+  }
+  
 
